--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "start": "parcel index.html"
   },
   "dependencies": {
-    "algoliasearch": "^4.19.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-instantsearch": "^7.0.1"
+    "@adobe/react-spectrum": "^3.30.0",
+    "@radix-ui/react-slider": "^1.1.2",
+    "algoliasearch": "^4.13.0",
+    "instantsearch.css": "^8.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-instantsearch": "^7.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.17.15",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "parcel": "^2.9.3",
