--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.30.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.9",
+    "@mui/system": "^5.14.9",
     "@radix-ui/react-slider": "^1.1.2",
-    "algoliasearch": "^4.13.0",
+    "algoliasearch": "^4.20.0",
     "instantsearch.css": "^8.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-instantsearch": "^7.0.2"
+    "react-instantsearch": "^7.0.3"
   },
   "devDependencies": {
-    "@types/node": "^18.17.15",
+    "@types/node": "^18.17.17",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "parcel": "^2.9.3",
