--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@mui/system": "^5.14.11",
+    "@mui/x-data-grid": "^6.16.0",
     "@radix-ui/react-slider": "^1.1.2",
     "algoliasearch": "^4.20.0",
     "instantsearch.css": "^8.1.0",
