--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bandsaws-react",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "^20.17.0",
+    "npm": "^10.8.3"
+  },
   "scripts": {
     "build": "parcel build index.html",
     "start": "parcel index.html"
@@ -14,13 +18,13 @@
     "@mui/system": "^5.16.7",
     "@mui/x-data-grid": "^6.19.6",
     "@radix-ui/react-slider": "^1.2.0",
-    "algoliasearch": "^4.24.0",
+    "algoliasearch": "^5.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-instantsearch": "^7.13.0"
   },
   "devDependencies": {
-    "@types/node": "^22.5.2",
+    "@types/node": "^20.16.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "parcel": "^2.12.0",
