--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "parcel index.html"
   },
   "dependencies": {
+    "@algolia/client-search": "^5.2.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
@@ -18,7 +19,6 @@
     "@mui/system": "^5.16.7",
     "@mui/x-data-grid": "^6.19.6",
     "@radix-ui/react-slider": "^1.2.0",
-    "algoliasearch": "^5.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-instantsearch": "^7.13.0"
