--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/system": "^6.0.2",
     "@mui/x-data-grid": "^7.16.0",
     "@radix-ui/react-slider": "^1.2.0",
-    "algoliasearch": "5.2.4",
+    "algoliasearch": "5.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-instantsearch": "^7.13.0"
@@ -32,5 +32,8 @@
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.4"
+  },
+  "@parcel/resolver-default": {
+    "packageExports": true
   }
 }
