--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,33 @@
-# Logs
-logs
-*.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+
+# Parcel
+.parcel-cache
+
+# Logs
+logs
+*.log
 
 node_modules
 dist
@@ -16,7 +38,6 @@ dist
 # Editor directories and files
 .vscode
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
