--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "bandsaws-react",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "clean": "rimraf dist .parcel-cache",
     "prebuild": "npm run clean",
     "build": "BABEL_ENV=parcel parcel build index.html --no-cache",
-    "start": "BABEL_ENV=parcel parcel index.html"
+    "start": "BABEL_ENV=parcel parcel index.html",
+    "import-data-to-db": "node --env-file=.env --import tsx data/import-bandsaws-to-db.ts",
+    "import-data-to-algolia": "node --env-file=.env --import tsx data/import-bandsaws-to-algolia.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -25,12 +28,14 @@
     "@parcel/core": "^2.15.2",
     "@parcel/packager-raw-url": "^2.15.2",
     "@parcel/transformer-webmanifest": "^2.15.2",
-    "@types/node": "^22.15.27",
+    "@supabase/supabase-js": "^2.39.7",
+    "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "parcel": "^2.15.2",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "@parcel/resolver-default": {
