--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
-    "@mui/system": "^7.1.0",
-    "@mui/x-data-grid": "^8.5.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
+    "@mui/system": "^7.1.1",
+    "@mui/x-data-grid": "^8.5.1",
     "@radix-ui/react-slider": "^1.3.5",
-    "algoliasearch": "5.25.0",
+    "algoliasearch": "^5.27.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-instantsearch": "^7.15.8"
@@ -28,10 +28,10 @@
     "@parcel/core": "^2.15.2",
     "@parcel/packager-raw-url": "^2.15.2",
     "@parcel/transformer-webmanifest": "^2.15.2",
-    "@supabase/supabase-js": "^2.39.7",
-    "@types/node": "^22.15.29",
+    "@supabase/supabase-js": "^2.50.0",
+    "@types/node": "^22.15.30",
     "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
+    "@types/react-dom": "^19.1.6",
     "parcel": "^2.15.2",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
