--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^22.18.12",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "buffer": "^6.0.3",
     "parcel": "^2.16.0",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
