--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/system": "^7.3.3",
-    "@mui/x-data-grid": "^8.14.1",
+    "@mui/x-data-grid": "^8.15.0",
     "@radix-ui/react-slider": "^1.3.6",
-    "algoliasearch": "^5.40.1",
+    "algoliasearch": "^5.41.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-instantsearch": "^7.16.3"
+    "react-instantsearch": "^7.17.0"
   },
   "devDependencies": {
     "@parcel/core": "^2.16.0",
     "@parcel/packager-raw-url": "^2.16.0",
     "@parcel/transformer-webmanifest": "^2.16.0",
-    "@supabase/supabase-js": "^2.75.1",
-    "@types/node": "^22.18.10",
+    "@supabase/supabase-js": "^2.76.1",
+    "@types/node": "^22.18.12",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "buffer": "^6.0.3",
     "parcel": "^2.16.0",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
